# STS_FoRL

Game/: CMakeLists.txt  Main.cpp  effects_triggers.h  gamestate1.cpp  relic.h  top.cpp  top.h
RL/: DQN.py  NN.py  PRED.py
